<resources>
    <string name="app_name">App bán tranh nghệ thuật</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="danh_muc_san_pham">Danh mục sản phẩm</string>
    <string name="taikhoan">Tài khoản</string>
    <string name="tieu_de_san_moi_nhat">MỚI CẬP NHẬT</string>
    <string name="tv_xemthemsanphammoinhat">Xem thêm</string>
    <string name="tieu_de_san_pham_noi_bat">ĐỀ XUẤT CHO BẠN</string>
    <string name="tv_xemthemsanpham_noi_bat">Xem thêm</string>
    <string name="menu_timkiem">Tìm kiếm</string>
    <string name="menutoobar_giohang">Giỏ Hàng</string>

    <string name="menu_nvai_trangchu">Trang chủ</string>
    <string name="menu_navi_sanpham">Sản phẩm</string>
    <string name="menu_navi_xemsanpham">Xem sản phẩm</string>
    <string name="menu_navi_themsanpham">Thêm sản phẩm</string>
    <string name="menu_navi_danhmucsanpham">Danh mục Sản phẩm</string>
    <string name="menu_navi_xemdmsanpham">Xem danh mục sản phẩm</string>
    <string name="menu_navi_themdmsanpham">Thêm danh mục sản phẩm</string>
    <string name="menu_navi_tiepnhanxulydonhang">Tiếp nhận và xử lý đơn hàng</string>
    <string name="menu_navi_xemthongtincanhan">Xem thông tin cá nhân</string>
    <string name="menu_navi_taikhoan">Tài khoản</string>
    <string name="menu_navi_danngxuat">Đăng xuất</string>
    <string name="menu_navi_doimatkhau">Đổi mật khẩu</string>
    <string name="menu_navi_quanlydonhang">Quản lý đơn hàng</string>

    <string name="Open_navi">Open</string>
    <string name="Close_navi">Close</string>
    <string name="tv_motademo">Google Dịch (tên tiếng Việt chính thức,[4] lúc đầu gọi là Google Thông dịch,[5] tên tiếng Anh là Google Translate) là một công cụ dịch thuật trực tuyến do Google phát triển. Nó cung cấp giao diện trang web, ứng dụng trên thiết bị di động cho hệ điều hành Android và iOS và giao diện lập trình ứng dụng giúp nhà phát triển xây dựng tiện ích mở rộng trình duyệt web và ứng dụng phần mềm. Google Dịch hỗ trợ hơn 100 ngôn ngữ ở các cấp khác nhau và kể từ tháng 5 nămhỗ trợ này có thể được sử dụng trong các lần dịch sau.</string>
    <string name="title_activity_tim_kiem_danh_muc">TimKiemDanhMucActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="tatcadonhang">Tất cả các đơn hàng</string>
    <string name="choxuly">Đang chờ xử lý</string>
    <string name="dangxuly">Đang xử lý</string>
    <string name="daxuly">Đã xử lý</string>

</resources>