<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toobar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/custum_toolbar"
            app:titleTextColor="@color/white">

            <TextView
                android:id="@+id/toolbar_title"
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/white" />
        </androidx.appcompat.widget.Toolbar>

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/switper_trangchu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <androidx.viewpager2.widget.ViewPager2
                            android:id="@+id/view_papager_2"
                            android:layout_width="match_parent"
                            android:layout_height="250dp"
                            android:layout_margin="10dp" />

                        <me.relex.circleindicator.CircleIndicator3
                            android:id="@+id/cir"
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:layout_below="@+id/view_papager_2"
                            android:layout_centerInParent="true"
                            app:ci_drawable="@drawable/backgroud_cir" />

                    </RelativeLayout>

                    <LinearLayout
                        android:id="@+id/rtv_spmn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal"
                        android:weightSum="3.5">

                        <TextView
                            android:id="@+id/tv_titile_spmn"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_weight="3"
                            android:text="@string/tieu_de_san_moi_nhat"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tv_xemthemspmn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="20dp"
                            android:layout_weight="0.5"
                            android:drawableRight="@drawable/ic_next"
                            android:gravity="end"
                            android:text="@string/tv_xemthemsanphammoinhat"
                            android:textColor="@color/purple_500"
                            android:textSize="18sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/rcv_spmn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/rtv_sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal"
                        android:weightSum="3.5">

                        <TextView
                            android:id="@+id/tv_titile_sp"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_weight="2.5"
                            android:text="@string/tieu_de_san_pham_noi_bat"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tv_xemthemspnb"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="20dp"
                            android:layout_weight="1"
                            android:drawableRight="@drawable/ic_next"
                            android:gravity="end"
                            android:text="@string/tv_xemthemsanpham_noi_bat"
                            android:textColor="@color/purple_500"
                            android:textSize="18sp"
                            android:textStyle="bold" />
                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingTop="10dp">

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/rcv_spdx"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.core.widget.NestedScrollView>

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    </LinearLayout>

</LinearLayout>

